Update prompts versions

--- a/app/prompts/prompts.yaml
+++ b/app/prompts/prompts.yaml
@@ -1,4 +1,5 @@
-v1: "Describe the image for use as alt text in 1 sentence. "
-    "Be concise, informative, and neutral. "
-    "Be in the range of max_words=20 and min_words=3"
-v2: "Describe the image for use as alt text in 1 sentence"
+v0.0.1: "Describe the image for use as alt text in 1 sentence"
+v0.0.2: None
+v0.0.3: "Describe the image for use as alt text in 1 sentence. "
+        "Be concise, informative, and neutral. "
+        "Be in the range of max_words=20 and min_words=3"
