--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ accelerate>=1.8.0
 azure-functions>=1.23.0
 torchvision>=0.22.1
 sentencepiece>=0.2.0,<1.0.0
+azure-identity>=1.23,<2.0.0
+azure-keyvault-secrets>=4.10.0,<5.0.0
